logic/src/ty/snapshots/logic__ty__ui__simple.snap
---
source: logic/src/ty/ui.rs
expression: string

---
error: Your program contains a type error!
  ┌─ file:3:12
  │
3 │     return "Hello World!"
  │            ^^^^^^^^^^^^^^ this is of type `String` which is not the same as type `Int`
4 │   else
5 │     return 1
  │            ^ this is of type Int


